log
Tue 07 May 2024 11:38:15 PM UTC: 
 tests:  1|8
total_score: 0/70
934f3fb
Tue 07 May 2024 11:43:05 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
d8523b9
Tue 07 May 2024 11:52:23 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|6
total_score: 15/70
cf4e133
Tue 07 May 2024 11:57:41 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  12|6
total_score: 15/70
e6d41cd
Tue 07 May 2024 11:58:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
c9ae127
Tue 07 May 2024 11:59:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
e758268
Wed 08 May 2024 12:12:13 AM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:98:24: error: unused variable ‘aux’ [-Werror=unused-variable]
   98 |             TreeNode * aux = node->parent;
      |                        ^~~
cc1: all warnings being treated as errors
Compilation failed
e6379e8
Wed 08 May 2024 12:12:57 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0eca1a3
